# dlbeswick-examples

./: README.md
Pancake Bros/: Pancake Bros.sln
Pancake Bros/cfg/: ai.ini  animations.ini  game.ini  levels.ini  materials.ini  music.ini  musicmanager.ini  options.ini  parallax.ini  particles.ini  spritefx.ini  ui.ini  uistyles.ini
Pancake Bros/eclipse/pbros/: postbuild.bat
Pancake Bros/src/: Pancake Bros.rc  Pancake Bros.vcproj  Pancake Bros.vcxproj  Pancake Bros.vcxproj.filters  Parallax.cpp  Parallax.h  RSEApp.cpp  RSEApp.h  ReadMe.txt  StdAfx.h  main.cpp  options.ini
Pancake Bros/src/Game/: Controller.cpp  Controller.h  Game.cpp  Game.h  Hammer.cpp  Hammer.h  Head.cpp  Head.h  Man.cpp  Man.h  ManAIControl.cpp  ManAIControl.h  Pancake.cpp  Pancake.h  PancakeLevel.cpp  PancakeLevel.h  PancakeSprite.cpp  PancakeSprite.h  PancakeSpriteFX.cpp  Physical.cpp  Physical.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Wave.cpp  Wave.h  Weapon.cpp  Weapon.h
Standard/autotools/: Makefile.am  Makefile.in  configure  configure.ac
Standard/autotools/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
Standard/autotools/src/: dlb-standard.ac
Standard/autotools/src/m4/: ax_pkg_swig.m4  ax_ruby_ext.m4
Standard/msvc/: Standard.plg  Standard.vcproj  Standard.vcproj.vspscc  Standard.vcxproj  Standard.vcxproj.filters
Standard/src/Standard/: Algebra.h  Base.cpp  Base.h  CMemCheck.cpp  CMemCheck.h  CircularBuffer.h  Collide.cpp  Collide.h  CommandLine.cpp  CommandLine.h  Config.cpp  Config.h  ConfigService.cpp  ConfigService.h  Counter.h  CriticalSectionBlock.cpp  CriticalSectionBlock.h  D3DHelp.h  Delegate.cpp  Delegate.h  Dirty.h  EmbeddedPtr.cpp  EmbeddedPtr.h  Exception.cpp  Exception.h  ExceptionFilesystem.cpp  ExceptionStream.cpp  ExceptionStream.h  FileHelp.h  FileMgr.cpp  FileMgr.h  Filesystem.cpp  Filesystem.h  Help.cpp  Help.h  Image.cpp  Image.h  Interpolation.h  Lazy.h  Lockable.h  (+75 more)
Standard/xcode/Standard.xcodeproj/: project.pbxproj
ruby/DJ/: Gemfile  dependencies.txt  djgui  djgui-debug.sh  jack-alsa-out-device.cfg  jack-alsa-out.sh  jack-patch.xml  macbook-jack-patch.xml  module-references  process-is-running.fn.sh
ruby/DJ/Config/: DJGui.ini  MIDIController100.ini  MasterDSound0.ini  MonitorDSoundDevice201.ini  SourceModifiers__Crossfade218.ini
ruby/DJ/Source/: ActuatorHost.rb  AudioLibrary.rb  ChangeActuator.rb  DNDArea.rb  DNDData.rb  DNDDataActuatorLink.rb  DNDStaticText.rb  DataSelector.rb  DevContainer.rb  GUIValueModifier.rb  MIDIController.rb  MenuBar.rb  Resource.rb  ResourceFile.rb  actuator.rb  album.rb  autotools  dj.rb  djapp.rb  djgui.rb  djinit.rb  djosx  drb_hacks.rb  eclipse_launch.rb  master.rb  midiactuator.rb  music_set_iterator.rb  music_set_iterator_concat.rb  music_set_iterator_random.rb  music_set_iterator_sequential.rb  musiccollection.rb  progress_wx.rb  source.rb  sourcemodifier.rb  sox-flac-seek.patch  test.rb  track.rb  visualactuator.rb  wx19test.rb
ruby/DJ/autotools/: Makefile.am  Makefile.in  Standard  configure  configure-debug.sh  configure.ac  dsound  mediatag  midiinterface  timer
ruby/DJ/autotools/autom4te.cache/: output.0  requests  traces.0  traces.1
ruby/DJ/patch/: wxruby-2.0.1-combo-mark-crash.patch
ruby/auanalysis/: app.rb  auanalysis.rb  data_source.rb  narray_auanalysis.rb  run  run-release.cmd  sound_data.rb  sound_file.rb  sound_file_audacity.rb  sound_file_audacity_au.rb  sound_file_raw.rb  task.out  thresholding.rb  track_boundary_analysis.rb  wavelet.rb
ruby/auanalysis/Config/: App.ini  Library.ini  LibraryLocalOverrides.ini
ruby/auanalysis/autotools/: linux
ruby/auanalysis/media/: album.rb  artist.rb  format.rb  library.rb  library_importer.rb  modification_watcher.rb  source_album.rb  source_file.rb  source_file_audacity.rb  source_file_flac.rb  source_file_mp3.rb  source_file_wav.rb  source_track.rb  track.rb
ruby/auanalysis/test/: test_task_runner.rb  test_track_boundaries.rb
ruby/auanalysis/transform/: batch_exporter.rb  export_request.rb  exporter.rb  external_program.rb  metadata.rb  output_format.rb  task_runner.rb  transform.rb
ruby/auanalysis/view/: export_request.rb  library.rb  sound_file.rb  source_album.rb
ruby/std/: AttributeReference.rb  Config.rb  ConfigSet.rb  ConfigXML.rb  ConfigYAML.rb  DataCombo.rb  DataListbox.rb  DefaultCreateable.rb  DefaultSymbolTypes.rb  EnumerableInstances.rb  EnumerableSubclasses.rb  EvalWindow.rb  GUIWx.rb  GUIfox.rb  IncludableClassMethods.rb  InheritableClassVariables.rb  MappingPersistent.rb  MappingSymbolDefaults.rb  MemoryProfiler.rb  ObjectHost.rb  PersistentWindow.rb  SafeThread.rb  SymbolDefaults.rb  TimedLogger.rb  UniqueID.rb  UniqueIDConfig.rb  abstract.rb  algorithm.rb  bugzillacalls.rb  builtin_extend.rb  deprecatable.rb  file_memory_mapped.rb  instance_exec.rb  interval.rb  mapping.rb  math.rb  method_chain.rb  module_logging.rb  notify.rb  observable_attributes.rb  (+16 more)
ruby/std/dsound/: dependencies.txt
ruby/std/dsound/autotools/: Makefile.am  Makefile.in  configure  configure.ac
ruby/std/dsound/autotools/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
ruby/std/mediatag/: dependencies.txt  interface_wrap.cxx  mediatag.vcproj
ruby/std/mediatag/autotools/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
ruby/std/midiinterface/: dependencies.txt  midiinterface.sln  midiinterface.vcproj  midiinterface.vcxproj  midiinterface.vcxproj.filters
ruby/std/midiinterface/autotools/: Makefile.am  Makefile.in  configure  configure.ac
ruby/std/test/: suite.rb  test_ConfigYAML.rb  test_EnumerableInstances.rb  test_EnumerableSubclasses.rb  test_IncludableClassMethods.rb  test_MemoryProfiler.rb  test_Viewable.rb  test_perforce.rb
ruby/std/timer/: timer.vcproj
ruby/std/timer/autotools/: Makefile.am  Makefile.in  configure  configure.ac
ruby/std/view/: AttributeReferenceTextField.rb  Date.rb  GraphView.rb  MultipleViewsTabbed.rb  Range.rb  View.rb  ViewContainer.rb  ViewFox.rb  ViewWx.rb  Viewable.rb  array.rb  (+17 more)
(+584 files in other folders)
